# oboannotation

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/: goa_human.SURF1_FBN1.gaf  phenotype.real-shortlist.hpoa
src/: go.rs  go_relation.rs  goannotation.rs  hpo.rs  io.rs  lib.rs
tests/: test_hpo.rs  test_hpoa.rs
