[package]
name = "oboannotation"
version = "0.1.3-dev0"
edition = "2024"
description = "Access annotations of biomedical ontologies"

[[bin]]
name = "demo"
path = "bin/demo.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
ontolius = { version = "0.7", default-features = false }
regex = "1.11.1"
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
thiserror = "2.0.12"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
